WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154833
OverridesHasInstance constant folding is wrong
https://bugs.webkit.org/show_bug.cgi?id=154833
Summary
OverridesHasInstance constant folding is wrong
Keith Miller
Reported
2016-02-29 13:30:53 PST
OverridesHasInstance constant folding is wrong
Attachments
Patch
(4.58 KB, patch)
2016-02-29 13:41 PST
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-02-29 13:41:59 PST
Created
attachment 272514
[details]
Patch
Mark Lam
Comment 2
2016-02-29 13:45:58 PST
Comment on
attachment 272514
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=272514&action=review
> Source/JavaScriptCore/ChangeLog:10 > + moved to the StrengthReductionPhase. Normally, such an optimazation would be
typo: optimazation => optimization
Keith Miller
Comment 3
2016-02-29 13:52:34 PST
Comment on
attachment 272514
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=272514&action=review
>> Source/JavaScriptCore/ChangeLog:10 >> + moved to the StrengthReductionPhase. Normally, such an optimazation would be > > typo: optimazation => optimization
Fixed
WebKit Commit Bot
Comment 4
2016-02-29 14:45:10 PST
Comment on
attachment 272514
[details]
Patch Clearing flags on attachment: 272514 Committed
r197370
: <
http://trac.webkit.org/changeset/197370
>
WebKit Commit Bot
Comment 5
2016-02-29 14:45:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug